src/objects/Accreditation__c.object
<CustomObject>
    <fields>
        <fullName>AIMS_ID__c</fullName>
        <externalId>true</externalId>
        <label>AIMS ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AMS_GDP_Key__c</fullName>
        <externalId>true</externalId>
        <label>AMS_GDP_Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accreditation_ID__c</fullName>
        <label>Accreditation ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accreditation_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the model of Accreditation the agency is a part of. 
Mapped to &quot;ANG_Accreditation_Model__c&quot; on AMS Account for Replication.</description>
        <inlineHelpText>Mapped to &quot;ANG_Accreditation_Model__c&quot; on AMS Account for Replication.</inlineHelpText>
        <label>Accreditation Model</label>
        <referenceTo>GDP_Reference_Table__c</referenceTo>
        <relationshipLabel>Accreditation (Accreditation Model)</relationshipLabel>
        <relationshipName>Accreditation3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cash_Conditions_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked, RHC equals Financial Security Amount Provided.
Mapped to &quot;ANG_CashCondition__c&quot; on AMS Account for Replication.</description>
        <inlineHelpText>If Checked, RHC equals Financial Security Amount Provided.
Mapped to &quot;ANG_CashCondition__c&quot; on AMS Account for Replication.</inlineHelpText>
        <label>Cash Conditions Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Class</label>
        <referenceTo>GDP_Reference_Table__c</referenceTo>
        <relationshipLabel>Accreditation (GDP Reference Table)</relationshipLabel>
        <relationshipName>Accreditation2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Status Attained On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Endorsed_Accredited_By_Code__c</fullName>
        <formula>Endorsed_Accredited_By__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Endorsed/Accredited By Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endorsed_Accredited_By_Formula__c</fullName>
        <formula>IF(Related_GDP_Products_Account_View__r.CNS_Agency__c,&quot;CNS&quot;,
IF(ISPICKVAL( Related_Account__r.Location_Class__c , &quot;W&quot;) , &quot;ARC&quot;, IF( ISPICKVAL(Related_Account__r.Location_Class__c, &quot;D&quot;) , &quot;DOM&quot;, IF( NOT(ISBLANK(Related_Account__r.WebStar_ID__c)) , &quot;IATAN&quot;, &quot;IATA&quot;)))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Endorsed/Accredited By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endorsed_Accredited_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Endorsed/Accredited By</label>
        <referenceTo>GDP_Reference_Table__c</referenceTo>
        <relationshipLabel>Accreditation (GDP Reference Table)</relationshipLabel>
        <relationshipName>Accreditation1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_NewGen_Agency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Agency falls under Reso 812 (NewGen ISS) or not.
Mapped to &quot;ANG_IsNewGenAgency__c&quot; on AMS Account for Replication.</description>
        <inlineHelpText>Mapped to &quot;ANG_IsNewGenAgency__c&quot; on AMS Account for Replication.</inlineHelpText>
        <label>Is NewGen Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_change_date__c</fullName>
        <label>Last change date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_re_inspection_date__c</fullName>
        <label>Last re-inspection date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_approval_date__c</fullName>
        <label>Original approval date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accreditation</relationshipLabel>
        <relationshipName>Accreditation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_GDP_Products_Account_View__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related GDP Products Account</label>
        <referenceTo>GDP_Products_Account_View__c</referenceTo>
        <relationshipLabel>Accreditation</relationshipLabel>
        <relationshipName>Accreditation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Status__c</fullName>
        <description>Current Risk Status of the Agent.
Mapped to &quot;ANG_RiskStatus__c&quot; on AMS Account for Replication.</description>
        <inlineHelpText>Mapped to &quot;ANG_RiskStatus__c&quot; on AMS Account for Replication.</inlineHelpText>
        <label>Risk Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Status</label>
        <referenceTo>GDP_Reference_Table__c</referenceTo>
        <relationshipLabel>Accreditation</relationshipLabel>
        <relationshipName>Accreditation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIDS_Reinstatement_Deadline__c</fullName>
        <description>TIDS Specific - Time period during which Reinstatement is permitted, calculated by formula (Termination Date + 90 days)</description>
        <formula>IF(Class__r.Code__c = &apos;T&apos;,Termination_Date__c + 90,null)</formula>
        <inlineHelpText>TIDS Specific - Time period during which Reinstatement is permitted, calculated by formula (Termination Date + 90 days)</inlineHelpText>
        <label>TIDS Reinstatement Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <description>Termination date of the agency participation - Driven by Process Builder &quot;Update Termination Date - GDP&quot;</description>
        <inlineHelpText>Termination date (driven by Process Builder &quot;Update Termination Date - GDP&quot;)</inlineHelpText>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Reason__c</fullName>
        <description>Reason for Termination - Maintained for TIDS Agent through the TIDS Service Portal</description>
        <inlineHelpText>Reason for Termination - Maintained for TIDS Agent through the TIDS Service Portal</inlineHelpText>
        <label>Reason For Termination (TIDS)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Termination by IATA</fullName>
                </value>
                <value>
                    <fullName>Voluntary Relinquishment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Virtual_Branch_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating if the Virtual Branch Feature is Enabled on the TIDS Service Portal</description>
        <inlineHelpText>Flag indicating if the Virtual Branch Feature is Enabled on the TIDS Service Portal</inlineHelpText>
        <label>Virtual Branch Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WebStar_ID__c</fullName>
        <externalId>true</externalId>
        <label>WebStar ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Accreditation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Class__c</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <columns>Related_GDP_Products_Account_View__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>AMS_GDP_Key__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Accreditation__c.Live</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Accreditation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accreditation</pluralLabel>
    <recordTypes>
        <fullName>GDP</fullName>
        <active>true</active>
        <label>GDP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>